# little-lemon

./: .gitignore  .sourcery.yaml  .spectral.mjs  Dockerfile  LICENSE  Little Lemon API.postman_collection.json  Little-Lemon-API.yaml  README.md  pyproject.toml  requirements.txt
little_lemon/: .invoke.yaml  schema.json  tasks.py
little_lemon/LittleLemonAPI/: APM.py  admin.py  apps.py  filters.py  metrics.py  models.py  serializers.py  urls.py  views.py
little_lemon/LittleLemonAPI/migrations/: 0001_initial.py  0002_menuitem_calories_menuitem_carbohydrates_mg_and_more.py  0002_rename_protien_gm_menuitem_protein_gm.py  0003_alter_menuitem_calories.py  0004_alter_menuitem_carbohydrates_mg_and_more.py  0005_alter_menuitem_calories.py
little_lemon/LittleLemonAPI/tests/: test_cache.py  test_models.py
little_lemon/little_lemon/: asgi.py  settings.py  urls.py  wsgi.py
little_lemon/little_lemon/utils/: cache.py  storage_backends.py
