[tool.poetry]
name = "little-leemon-final"
version = "1.0.0"
description = "Terry Brooks, Jr. Final Project forthe APIs course for Meta Backend Developer Certification Via Coursera"
authors = ["Terry Arthur Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
djangorestframework = "^3.15.2"
Markdown = "^3.7"
django-filter = "^24.3"
djoser = "^2.2.3"
psycopg2-binary = "^2.9.10"
django-cockroachdb = "5.1"
django-seed = "^0.3.1"
djangorestframework-simplejwt = "^5.3.1"
drf-redesign = "^0.4.0"
loguru = "^0.7.2"
django-prometheus = "^2.3.1"
django-redis = "^5.4.0"
redis = "^5.2.0"
django-cachalot = "^2.7.0"
django-dynamic-breadcrumbs = "^0.4.3"
isort = "^5.13.2"
django-pytest = "^0.2.0"
logtail-python = "^0.3.1"
gunicorn = "^23.0.0"
invoke = "^2.2.0"
whitenoise = "^6.8.2"
django-bunny = "^1.1.6"
drf-spectacular = "^0.27.2"
python-memcached = "^1.62"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
